Sat Dec 23 22:56:16 CST 2000 Adam Heath <doogie@debian.org>

  * main/dpkg.8: Document that --largemem is the default, and that
    the test point is 24 megs.

Sat Dec 23 22:53:23 CST 2000 Adam Heath <doogie@debian.org>

  * main/dpkg.8: Document that --set-selections does not actually
    install any packages.

Sat Dec 23 22:41:47 CST 2000 Adam Heath <doogie@debian.org>

  * dpkg-deb/dpkg-deb.1: Fix typo.

Sat Dec 23 22:24:23 CST 2000 Adam Heath <doogie@debian.org>

  * scripts/dpkg-divert.pl: Add --truename option.

Sat Dec 23 21:40:32 CST 2000 Adam Heath <doogie@debian.org>

  * main/dpkg.8:  Document COLUMNS environment variable.

Sat Dec 23 21:20:43 CST 2000 Adam Heath <doogie@debian.org>

  * dpkg-deb/extract.c, include/dpkg.h.in, lib/mlib.c,
    main/enquiry.c, main/filesdb.c, main/packages.c, main/remove.c,
    utils/start-stop-daemon.c: Clean up a few gcc warnings.  Note,
    that the warning:
      "deprecated conversion from string constant to `char *'"
    is actually a bug in ncurses-dev(which has been filed as 80410)
    not setting the fmt argument as const.

Sat Dec 23 19:33:05 CST 2000 Adam Heath <doogie@debian.org>

  * automake/dpkg.m4, configure.in, Makefile.conf.in:
    Modified DPKG_C_GCC_TRY_WARNS() to call AC_SUBST, so that we can
    use the result of the test during build time.

Sat Dec 23 16:44:25 CST 2000 Adam Heath <doogie@debian.org>

  * main/depcon.c: Added description for "suggests" in describedepcon().

Sat Dec 23 16:24:31 CST 2000 Adam Heath <doogie@debian.org>

  * debian/dpkg.postinst: Remove bashism.

Sat Dec 23 03:06:19 CST 2000 Adam Heath <doogie@debian.org>

  * scripts/cl-debian.pl: Make '#' optional in Closes: tags.

Sat Dec 23 02:11:27 CST 2000 Adam Heath <doogie@debian.org>

  * scripts/dpkg-buildpackage.sh: Add -t to -h output.

Fri Dec 22 12:35:43 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * scripts/update-alternatives.8: use FHS instead of FSSTND

Thu Dec 21 19:30:56 CET 2000 peter karlsson <peterk@debian.org>