@@ -148,6 +148,9 @@ reason. This is a last resort, and is only meant for programs that either
 make no sense forking on their own, or where it's not feasible to add the
 code for it to do this itself.
 .TP
+-BR -N | --nicelevel
+This alters the prority of the process before starting it.
+.TP
 .BR -m | --make-pidfile
 Used when starting a program that does not create its own pid file. This
 option will make
