@@ -1,5 +1,7 @@
 dpkg (1.8.0) unstable; urgency=low
 
+  * Add --nicelevel to start-stop-daemon, to alter a programs priority
+    before starting.  Closes: #65191.
   * Document that --largemem is the default, and that the test point is
     24 megs.  Closes: #65607.
   * Document that --set-selections does not actually install any
