@@ -1,3 +1,8 @@
+Sat Dec 23 23:28:52 CST 2000 Adam Heath <doogie@debian.org>
+
+  * utils/start-stop-daemon.c: Add --nicelevel, to alter a
+    programs priority before starting.
+
 Sat Dec 23 22:56:16 CST 2000 Adam Heath <doogie@debian.org>
 
   * main/dpkg.8: Document that --largemem is the default, and that
